// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Canvas adjusts the height when updating dimensions 1`] = `
<body>
  <div>
    <div
      class="canvas_container"
      id="canvas-container"
    >
      <div
        class="canvas_background"
      >
        <div
          class="canvas"
          data-testid="canvas"
          id="canvas"
          style="height: 1700px;"
        >
          <div />
          <div
            class="draggable"
            data-testid="draggable_132de855-4042-4dc1-a18f-cc2e6a8f790a"
            style="left: 100px; top: 1200px;"
          />
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`Canvas initializes the height to the lowest draggable 1`] = `
<body>
  <div>
    <div
      class="canvas_container"
      id="canvas-container"
    >
      <div
        class="canvas_background"
      >
        <div
          class="canvas"
          data-testid="canvas"
          id="canvas"
          style="height: 1590px;"
        >
          <div />
          <div
            class="draggable"
            data-testid="draggable_1e47a1e1-3c67-4df5-adf1-da542c789adb"
            style="left: 100px; top: 1200px;"
          />
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`Canvas reflows collisions 1`] = `
Array [
  Array [
    "42ebf1d0-a43e-4ba6-9577-c863b20c88c4",
  ],
]
`;

exports[`Canvas render default 1`] = `
<body>
  <div>
    <div
      class="canvas_container"
      id="canvas-container"
    >
      <div
        class="canvas_background"
      >
        <div
          class="canvas"
          data-testid="canvas"
          id="canvas"
          style="height: 0px;"
        >
          <div />
        </div>
      </div>
    </div>
  </div>
</body>
`;
